[package]
authors = ["Joseph T Lyons <JosephTLyons@gmail.com>"]
description = "Calculate delay times, in milliseconds and in hertz, for a given tempo"
edition = "2021"
license = "GPL-3.0-only"
name = "delay_times"
repository = "https://github.com/JosephTLyons/delay_times"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_float_eq = "1.1.3"
readonly = "0.2"
